# injection-pii-guardrail-mcp

./: .gitignore  pyproject.toml  requirements.txt
eval/: eval_set.json  run_eval.py
guardrail/: audit.py  injection_detector.py  pii_detector.py  server.py
tests/: test_detectors.py  test_mcp_client.py
