[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "injection-pii-guardrail-mcp"
version = "0.1.0"
description = "An MCP server providing prompt-injection detection, PII/secrets redaction, and an audit trail for AI agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Naman" }
]
keywords = ["mcp", "model-context-protocol", "security", "guardrail", "prompt-injection", "pii", "llm-security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
llm-judge = ["anthropic>=0.40.0"]

[project.scripts]
injection-pii-guardrail-mcp = "guardrail.server:main"

[project.urls]
Homepage = "https://github.com/yourusername/injection-pii-guardrail-mcp"
Repository = "https://github.com/yourusername/injection-pii-guardrail-mcp"

[tool.hatch.build.targets.wheel]
packages = ["guardrail"]